# iron-sight

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  IronSight.sln  README.md
Source/Client/: AnimationUI.cpp  AnimationUI.h  Animator3DUI.cpp  Animator3DUI.h  CEditorCamScript.h  CEditorMgr.h  CImGuiMgr.cpp  CImGuiMgr.h  CLevelSaveLoad.cpp  CLevelSaveLoad.h  CMakeLists.txt  CameraUI.cpp  Client.rc  Client.vcxproj  Client.vcxproj.filters  Collider2DUI.cpp  ComponentUI.cpp  ComponentUI.h  ContentUI.cpp  EditorUI.cpp  FlipbookUI.cpp  GraphicShaderUI.h  Inspector.cpp  Inspector.h  LandScapeUI.cpp  LandScapeUI.h  Light3DUI.cpp  ListUI.cpp  ListUI.h  MaterialUI.cpp  MenuUI.cpp  MeshDataUI.cpp  MeshRenderUI.cpp  MeshUI.h  Outliner.cpp  Outliner.h  ParamUI.cpp  PrefabUI.cpp  PrefabUI.h  SE_AtlasView.cpp  (+17 more)
Source/Client/API/Private/: ClientFacade.cpp
Source/Client/API/Public/: ClientFacade.h
Source/Client/Core/Private/: AppWindow.cpp  CEditorMgr.cpp  CLevelSaveLoad.cpp  ClientApp.cpp  FClientApp.cpp  FWindow.cpp
Source/Client/Core/Public/: AppWindow.h  CEditorMgr.h  CLevelSaveLoad.h  ClientApp.h  FClientApp.h  FWindow.h
Source/Client/Rendering/Private/: ComputeShaderUI.cpp  GraphicShaderUI.cpp
Source/Client/Rendering/Public/: ComputeShaderUI.h  GraphicShaderUI.h
Source/Client/Script/Private/: CEditorCamScript.cpp  CEditorSpaceCamScript.cpp  CGameObjectEx.cpp
Source/Client/Script/Public/: CEditorCamScript.h  CEditorSpaceCamScript.h  CGameObjectEx.h
Source/Client/System/Private/: CImGuiMgr.cpp
Source/Client/System/Public/: CImGuiMgr.h
Source/Client/UI/Private/: TargetOBUI.cpp
Source/Client/UI/Private/Asset/: AnimationUI.cpp  AssetUI.cpp  FlipbookUI.cpp  MaterialUI.cpp  MeshDataUI.cpp  MeshUI.cpp  PrefabUI.cpp  SkeletonUI.cpp  SoundUI.cpp  SpriteUI.cpp  TextureUI.cpp
Source/Client/UI/Private/Component/: Animator3DUI.cpp  BoxColliderUI.cpp  CameraUI.cpp  Collider2DUI.cpp  Collider3DUI.cpp  ColliderRayUI.cpp  ComponentUI.cpp  DecalUI.cpp  LandScapeUI.cpp  LandscapeUI.cpp  Light2DUI.cpp  Light3DUI.cpp  MeshColliderUI.cpp  MeshRenderUI.cpp  ParticleUI.cpp  PlaneColliderUI.cpp  RayColliderUI.cpp  ScriptUI.cpp  SkyBoxUI.cpp  StateMachineUI.cpp  TransformUI.cpp
Source/Client/UI/Private/Editor/: AddObjectUI.cpp  ContentUI.cpp  EditorUI.cpp  Inspector.cpp  ListUI.cpp  MenuUI.cpp  Outliner.cpp  ParamUI.cpp  TreeUI.cpp
Source/Client/UI/Private/PrefabEditor/: PrefabEditor.cpp
Source/Client/UI/Private/SpriteEditor/: SE_AtlasView.cpp  SE_Detail.cpp  SE_Sub.cpp  SpriteEditor.cpp
Source/Client/UI/Public/: TargetOBUI.h
Source/Client/UI/Public/Asset/: AnimationUI.h  AssetUI.h  FlipbookUI.h  MaterialUI.h  MeshDataUI.h  MeshUI.h  PrefabUI.h  SkeletonUI.h  SoundUI.h  SpriteUI.h  TextureUI.h
Source/Client/UI/Public/Component/: Animator3DUI.h  BoxColliderUI.h  CameraUI.h  Collider2DUI.h  Collider3DUI.h  ColliderRayUI.h  ComponentUI.h  DecalUI.h  LandScapeUI.h  LandscapeUI.h  Light2DUI.h  Light3DUI.h  MeshColliderUI.h  MeshRenderUI.h  ParticleUI.h  PlaneColliderUI.h  RayColliderUI.h  ScriptUI.h  SkyBoxUI.h  StateMachineUI.h  TransformUI.h
Source/Client/UI/Public/Editor/: AddObjectUI.h  ContentUI.h  EditorUI.h  Inspector.h  ListUI.h  MenuUI.h  Outliner.h  ParamUI.h  TreeUI.h
Source/Client/UI/Public/PrefabEditor/: PrefabEditor.h
Source/Client/UI/Public/SpriteEditor/: SE_AtlasView.h  SE_Detail.h  SE_Sub.h  SpriteEditor.h
Source/Client/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_widgets.cpp
Source/Engine/: CAnimation.cpp  CAnimation.h  CAnimator3D.cpp  CAnimator3D.h  CAssetMgr.h  CAssetMgr_Init.cpp  CAssetMgr_Mesh.cpp  CBoneMatrixCS.cpp  CCamera.cpp  CCamera.h  CClearColorCS.cpp  CClearColorCS.h  CCollider2D.h  CCollider3D.cpp  CCollider3D.h  CCollisionMgr.cpp  CCollisionMgr.h  CComponent.cpp  CComponent.h  CComputeShader.cpp  CComputeShader.h  CConstBuffer.cpp  CConstBuffer.h  CCopyBoneCS.cpp  CCopyBoneCS.h  CDecal.cpp  CDecal.h  CDevice.cpp  CEngine.cpp  CFBXLoader.cpp  CFBXLoader.h  CFlipbook.cpp  CFlipbook.h  CFlipbookPlayer.cpp  CFlipbookPlayer.h  CFontMgr.cpp  CFontMgr.h  CFrustum.h  CGameObject.cpp  CGameObject.h  (+74 more)
Source/Engine/API/Private/: EngineFacade.cpp
Source/Engine/API/Public/: EngineFacade.h
Source/Engine/Core/Private/: CEngine.cpp  CEntity.cpp  Engine.cpp
Source/Engine/Core/Public/: CEngine.h  CEntity.h  Engine.h
Source/Engine/Runtime/Private/Actor/: CGameObject.cpp  CLayer.cpp  CLevel.cpp
Source/Engine/Runtime/Private/State/: CState.cpp
Source/Engine/Runtime/Public/Actor/: CGameObject.h  CLayer.h  CLevel.h
Source/Engine/Runtime/Public/State/: CState.h
Source/Engine/Shader/: bonemat.fx  camera_postprocess.fx  copybone.fx  debug.fx  func.fx  light.fx  merge.fx  mesh_collision.fx  particle_composite.fx  particle_tick.fx  raycast.fx  std2d.fx  std3d.fx  std3d_deferred.fx  struct.fx  targetpost.fx  tess.fx  tilemap.fx  ui.fx  value.fx
Source/Engine/System/Private/Manager/: CAssetMgr.cpp  CAssetMgr_Init.cpp  CAssetMgr_Mesh.cpp  CCollisionMgr.cpp  CFontMgr.cpp  CKeyMgr.cpp  CLandScape_Init.cpp  CLevelMgr.cpp  CObjectPoolMgr.cpp  CPathMgr.cpp  CRenderMgr.cpp  CRenderMgr_Init.cpp  CScriptMgr.cpp  CSoundMgr.cpp  CStateMgr.cpp  CTaskMgr.cpp  CTimeMgr.cpp  CUIMgr.cpp  FCollisionBVH.cpp  FCollisionBroad.cpp  FCollisionManager.cpp  FCollisionNarrow.cpp  FCollisionRaycast.cpp  FLogManager.cpp  FShaderManager.cpp  (+2 more)
Source/Game/: CMakeLists.txt  Game.aps  Game.vcxproj  Game.vcxproj.filters  GameStart.cpp  GameStart.h  TestFadeInOutReset.cpp  main.cpp  pch.h
Source/Game/Factory/Private/: GameFactory.cpp
Source/Game/Factory/Public/: GameFactory.h
Source/Game/Gameplay/: BombController.cpp  TestSound.cpp  TestSound.h  scripts.h  states.h
Source/Game/Gameplay/Event/: EventScriptBase.cpp  EventScriptBase.h  TestFadeInOutReset.cpp  TestFadeInOutReset.h
Source/Game/Level/Private/: TestLevel.cpp
Source/Game/Level/Public/: TestLevel.h
Source/Game/System/Private/: CGameMgr.cpp  GameplayManager.cpp  StateMgr.cpp
Source/Game/System/Public/: CGameMgr.h  GameplayManager.h  StateMgr.h  states.h
(+594 files in other folders)
